--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&family=Poppins:wght@700&display=swap');
+
+@layer base {
+  html {
+    font-family: 'Nunito Sans', sans-serif;
+  }
+}
