Align arrows on desktop with flex

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,8 +22,9 @@
     @apply py-14; 
     @apply md:py-16;
     @apply lg:py-0;
+    @apply lg:px-12;
     @apply justify-between; 
-    @apply lg:justify-center;
+    @apply lg:justify-evenly;
     @apply overflow-hidden;
     @apply lg:items-center;
     @apply relative;
