--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,7 +28,7 @@
     @apply overflow-hidden;
     @apply lg:items-center;
     @apply relative;
-    @apply transition-opacity;
+    @apply transition-all;
     @apply duration-1000;
   }
 }
